Fix Vercel config for monorepo deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 ﻿{
-  "version": 2,
-  "framework": "nextjs",
-  "installCommand": "cd apps/admin-web && npm install",
-  "buildCommand": "cd apps/admin-web && npm run build",
-  "devCommand": "cd apps/admin-web && npm run dev",
+  "buildCommand": "cd apps/admin-web && npm install && npm run build",
   "outputDirectory": "apps/admin-web/.next",
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "${NEXT_PUBLIC_SUPABASE_URL}",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "${NEXT_PUBLIC_SUPABASE_ANON_KEY}"
-  }
+  "installCommand": "cd apps/admin-web && npm install",
+  "framework": "nextjs"
 }
